﻿Mag-Software\PseudoGame\ChangeLog.txt

2016-04-23, P
 Add ChangeLog.txt (this file)
 Disable dynamic assembly load & unload of Mag-Filter (b/c it excepts when called from front-end)
   and instead implement Startup & Shutdown buttons linked to Mag-Filter in current AppDomain